Moved profile name to use margin left instead of relative positioning left to fix name not showing on small screens

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -57,7 +57,7 @@
 #profile-text
 {
 	position: relative;
-    left: -70px;
+    margin-left: -70px;
     top: 22px;
     z-index: -1;
     float: left;
